--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -2,3 +2,80 @@
 	margin-top: 20px;
 	clear: both;
 }
+.clear40 {
+  margin-top: 40px;
+  clear: both;
+}
+table, tr, td {
+    border: none;
+}
+.rightTable {
+  width: 25%;
+  float: right;
+}
+.leftTable {
+  width: 100%;
+  float: left;
+}
+.companyName {
+  border: 1px solid black;
+  border-radius: 25px;
+  font-weight: 700;
+  line-height: 50px;
+  text-align: center;
+  font-size: 30px;
+}
+.companyName:after {
+  content: "";
+  display: block;
+  padding-bottom: 5%;
+
+}
+.Name {
+  padding-top: 10px;
+  border: 1px solid black;
+  font-weight: normal;
+  line-height: 30px;
+  text-align: center;
+  font-size: 20px;
+}
+.Name:after {
+  content: "";
+  display: block;
+  padding-bottom: 5%;
+
+}
+  @media print {
+  body * {
+    visibility: hidden;
+  }
+  .sub_header * {
+    visibility: visible;
+  }
+  .leftTable {
+    visibility: visible;
+    width: 30%;
+  }
+  .grand_total_print * {
+    visibility: visible;
+  }
+  .grand_total_print {
+    padding-top: 40px;
+  }
+  .print-area  * {
+    visibility: visible;
+  }
+  .leftTable {
+    visibility: visible;
+  }
+  .header-print * {
+     visibility: visible;
+  }
+ /* .print-area {
+    position: absolute;
+    left: 0;
+    top: 0;
+  }*/
+}
+
+
