--- a/app/views/admin/payments/show.html.erb
+++ b/app/views/admin/payments/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="col-lg-12">
-    <h1 class="page-header"><%= @admin_client.name %> Payments</h1>
+    <h1 class="page-header text-center"><%#= @admin_payment.client.name %> Payment Recieving</h1>
   </div>
   
 </div>
@@ -10,49 +10,40 @@
   <div class="col-lg-12">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <%= @admin_client.name %> Payments
+        <%= @admin_payment.client.name %> Payments
         <%#= link_to '<i class="fa fa-plus"></i> Add New client'.html_safe, new_admin_product_path, class: "btn btn-default pull-right add-btn" %>
       </div>
       <div class="panel-body">
         <div class="dataTable_wrapper">
-          <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+          <table width="100%" class="table table-striped table-bordered table-hover" id="datatable">
             <thead>
                 <tr>
-                    <th>Sr#</th>
+                    <th>Payment#</th>
                     <th>Payment Date</th>
                     <th>Payemnt Type</th>
                     <th>amount</th>
-                    <th>Order Num</th>
+                    <th>Description</th>
                 </tr>
             </thead>
             <tbody>
 
-              <% @admin_client.payments.each_with_index do |admin_payment,index| %>
-              <% if @admin_client.orders.present? %>
+              <%# if @admin_client.orders.present? %>
                 <tr class="odd gradeX">
                   <!-- <td><%#= index+1 %></td> -->
-                  <td><%= index+1 %></td>
+                  <td><%= @admin_payment.id %></td>
                   
-                  <td><%= admin_payment.created_at.strftime("%B-%d-%Y") %></td>
+                  <td><%= @admin_payment.created_at.strftime("%B-%d-%Y") %></td>
 
                   <td>
-                     <%= admin_payment.payment_type %>
+                     <%= @admin_payment.payment_type %>
                   </td>
                    <td>
-                     <%= admin_payment.amount %>
+                     <%= @admin_payment.amount %>
                   </td>
-                  <% if admin_payment.order.present? %>
                   <td>
-                     <%= admin_payment.order.id %>
+                     <%= @admin_payment.description %>
                   </td>
-                  <% else %>
-                  <td>Payment added manually</td>
-                  <% end %>
                 </tr>
-                <% else %>
-                <h1>No Orders found</h1>
-                <% end %>
-              <%end%>                                                                             
             </tbody>
           </table>
         </div>
@@ -60,3 +51,29 @@
     </div>
   </div>
 </div>
+
+
+<div class="row">
+  <div class="col-lg-12">
+    <div class="center">
+      <span class ="signature">Signature: <span class = "line"></span></span>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-lg-6">
+    <button class="btn btn-primary" onclick="print()" style="float: left;">Print</button>
+  </div>
+</div>
+<style type="text/css">
+.center {
+  float: right;
+  font-weight: 700;
+  margin-top: 20px;
+}
+  .date > .line, .signature > .line {
+  display: inline-block;
+  border-bottom: 1px solid #000;
+  width: 150px;
+}
+</style>
