--- a/app/views/admin/return_orders/_form.html.erb
+++ b/app/views/admin/return_orders/_form.html.erb
@@ -16,33 +16,39 @@
                   <%= f.number_field :gazana_num ,class: 'form-control', placeholder: 'Enter Gazana Number'%>
               </div>
             </div>
-            <%= f.fields_for :stocks do |stock| %>
-              <div class="form-row">
-                <div class="col-md-12 mb-6" style="margin-top: 20px;">
-                  <%=stock.label :product_id%>
-                  <%= stock.select :product_id, Product.all.collect { | product | [product.name, product.id]} ,{include_blank: '-choose product-' } , {:class => 'form-control' , id: "select-product_#{stock.index}", onChange: "get_price('#{stock.index}')"} %>
+             <%= f.fields_for :line_items do |line_item| %>
+               <div class="form-row">
+                <div class="col-md-12 mb-12" style="margin-top: 20px;">
+                  <%=line_item.label :product_id%>
+                  <%= line_item.select :product_id, Product.all.collect { | product | [product.name, product.id]} ,{:disabled => Product.out_of_stock ,include_blank: '-choose product-' } , {:class => 'form-control' , id: "select-product_#{line_item.index}", onChange: "get_price('#{line_item.index}')"} %>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-md-6 mb-4" style="margin-top: 20px;">
-                  <%=stock.label :than%>
-                  <%=stock.text_field :than ,class: 'form-control', placeholder: 'Enter Number Thans', required: 'true'%>
+              <div class="form-row">
+                <div class="col-md-4 mb-4" style="margin-top: 20px;">
+                  <%=line_item.label :than%>
+                  <%=line_item.text_field :than ,class: 'form-control', placeholder: 'Enter Number Thans', required: 'true'%>
                 </div>
-                <div class="col-md-6 mb-4" style="margin-top: 20px;">
-                  <%=stock.label :gazana_per_than%>
-                  <%=stock.text_field :gazana_per_than ,class: 'form-control', placeholder: 'Enter Gaz Per Than', required: 'true'%>
+                <div class="col-md-4 mb-4" style="margin-top: 20px;">
+                  <%=line_item.label :gaz_per_than%>
+                  <%=line_item.text_field :gaz_per_than ,class: 'form-control', placeholder: 'Enter Gaz Per Than', required: 'true'%>
+                </div>
+              
+               
+                <div class="col-md-4 mb-4" style="margin-top: 20px;">
+                  <%=line_item.label :price_per_meter%>
+                  <%=line_item.text_field :price_per_meter ,class: 'form-control price_per_meter',id: "price_per_meter_"+"#{line_item.index}", placeholder: 'Enter Rate/meter', required: 'true'%>
                 </div>
               </div>
               <div class="form-row">
                 <div class="col-md-12 text-center" style="margin-top: 20px; clear: both;">
-                  <%= stock.link_to_remove "Remove this product", class: "btn btn-danger" %>
+                  <%= line_item.link_to_remove "Remove this product", class: "btn btn-danger" %>
                 </div>
               </div>
               
             <% end %>
             <hr>
             <%= f.hidden_field :order_type, value: "return_invoice" %>
-           <p><%= f.link_to_add "Add Another Product", :stocks, class: "btn btn-primary"  %></p>
+           <p><%= f.link_to_add "Add Another Product", :line_items, class: "btn btn-primary"  %></p>
            <%= f.submit 'Submit Button', class: "btn btn-default" %>
             <button type="reset" class="btn btn-default">Reset Button</button>
             <a  href="/admin/products" class="btn btn-default">Back</a>
