--- a/app/views/admin/return_orders/index.html.erb
+++ b/app/views/admin/return_orders/index.html.erb
@@ -19,7 +19,7 @@
                 <tr>
                     <th>ID</th>
                     <th>Client Name</th>
-                    <th>Product</th>
+                    <!-- <th>Product</th> -->
                     <th>Amount</th>
                     <th>Returned Date</th>
                     <th class="text-center">Actions</th>
@@ -32,10 +32,11 @@
                 <tr class="odd gradeX">
                   <td><%= index+1 %></td>
                   <td><%= admin_order.client.name %></td>
-                  <td><%= admin_order.stocks.first.product.name %></td>
+                  <!-- <td><%#= admin_order.stocks.first.product.name %></td> -->
                   <td><%= admin_order.grand_total %></td>
                   <td><%= admin_order.created_at.strftime("%B-%d-%Y") %></td>
                   <td class="text-center">
+                      <span><%= link_to '', admin_return_order_path(admin_order) ,class: "edit fa fa-eye icon_link with-tip no-text", title: "order detail"%>&nbsp; &nbsp;</span>
                       <span>
                       <%= link_to '', edit_admin_return_order_path(admin_order) ,class: "edit fa fa-edit icon_link with-tip no-text", title: "edit"%>&nbsp; &nbsp;
                       </span>
