--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -198,16 +198,19 @@
             </ul>
         </li> -->
         <!-- /.dropdown -->
+        
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                 <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
             </a>
             <ul class="dropdown-menu dropdown-user">
-                <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
+            <% if can? :manage, User %>
+                <li><a href="/admin/users"><i class="fa fa-user fa-fw"></i> User Settings</a>
                 </li>
-                <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-                </li>
+                <!-- <li><a href="#"><i class="fa fa-gear fa-fw"></i> </a>
+                </li> -->
                 <li class="divider"></li>
+            <% end %>
                 <li>
                 <%= link_to("<i class='fa fa-sign-out fa-fw'></i>Logout".html_safe, destroy_user_session_path, :method => :delete) %>
                 </li>
@@ -330,14 +333,14 @@
                     </ul>
                 </li> -->
                 <!-- links for Vendors -->
-<!--                     <li>
+                    <!-- <li>
                         <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Vendors<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
-                                <a href="/admin/users">All Vendors</a>
+                                <a href="/admin/users">All Users</a>
                             </li>
                             <li>
-                                <a href="/admin/users/new">New Vendor</a>
+                                <a href="/admin/users/new">Create User</a>
                             </li>
                         </ul>
                     </li> -->
