--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -19,17 +19,19 @@
                 <tr>
                     <th>All Users</th>
                     <th>Email</th>
+                    <th>Role</th>
                     <th class="text-center">Actions</th>
                     
                 </tr>
             </thead>
             <tbody>
 
-              <% @admin_user.each_with_index do |admin_user,index| %>
+              <% @admin_users.each_with_index do |admin_user,index| %>
 
                 <tr class="odd gradeX">
                   <td><%= index+1 %></td>
                   <td><%= admin_user.email %></td>
+                  <td><%= admin_user.roles.first.name%></td>
                   <td class="text-center">
                       <span>
                       <%= link_to '', edit_admin_user_path(admin_user) ,class: "edit fa fa-edit icon_link with-tip no-text", title: "edit"%>&nbsp; &nbsp;
