changes for remaining amount added

--- a/app/views/admin/payments/index.html.erb
+++ b/app/views/admin/payments/index.html.erb
@@ -38,6 +38,7 @@
                     <th>Payment Date</th>
                     <th>Payemnt Type</th>
                     <th>amount</th>
+                    <th>Remaining amount</th>
                     <th>Description</th>
                     <th>Action</th>
                 </tr>
@@ -57,6 +58,9 @@
                   </td>
                    <td>
                      <%= admin_payment.amount %>
+                  </td>
+                  <td>
+                     <%= admin_payment.remaining_amount %>
                   </td>
                   <% if admin_payment.order.present? && admin_payment.order.order_type == "order"  %>
                     <td>
