--- a/app/views/admin/return_orders/show.html.erb
+++ b/app/views/admin/return_orders/show.html.erb
@@ -1,7 +1,7 @@
 
 <div class="row">
   <div class="col-lg-12 header-print">
-    <h1 class="page-header"><%= @admin_order.created_at.strftime("%m/%d/%Y %I:%M%p")  %></h1>
+    <h1 class="page-header" style="font-size: 15px;"><%= @admin_order.created_at.strftime("%m/%d/%Y %I:%M%p")  %></h1>
   </div>
 </div>
 <div class="row">
@@ -28,14 +28,13 @@
     </table>
   </div>
   <div class="col-sm-4 companyName">
-    <%= @admin_order.client.name %>
+    Sayed Cloth House
   </div>
    <div class="col-sm-4  ">
     <div class="Name">
-        Sayed Cloth House <br>
-        Rail Bazar<br>
-        067-3351930-31<br>
-        Burewala<br>
+       <%= @admin_order.client.name %> <br>
+        <%= @admin_order.client.address %><br>
+        <%= @admin_order.client.phone %><br>
     </div>
   </div>
   
@@ -127,9 +126,9 @@ table, tr, td {
   border: 1px solid black;
   border-radius: 25px;
   font-weight: 700;
-  line-height: 50px;
+  line-height: 40px;
   text-align: center;
-  font-size: 30px;
+  font-size: 25px;
 }
 .companyName:after {
   content: "";
@@ -203,4 +202,3 @@ table, tr, td {
   }*/
 }
 </style>
-
