--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -12,10 +12,12 @@
               <th>Date</th>
                 <td> <%= @admin_order.created_at.strftime("%m/%d/%Y") %> </td>
             </tr>
-            <tr>
-              <th>Gazana #</th>
-                <td><%= @admin_order.gazana_num %></td>
-            </tr>
+            <% if @admin_order.gazana_num.present? %>
+              <tr>
+                <th>Gazana #</th>
+                  <td><%= @admin_order.gazana_num %></td>
+              </tr>
+            <% end %>
             <tr>
               <th>Invoice #</th>
                 <td><%= @admin_order.id %></td>
@@ -23,6 +25,10 @@
             <tr>
               <th>Term</th>
                 <td><%= @admin_order.payment.payment_type %></td>
+            </tr>
+            <tr>
+              <th>Term</th>
+                <td><%= @admin_order.client.name %></td>
             </tr>
         </tbody>
     </table>
@@ -151,6 +157,9 @@ table, tr, td {
 
 }
   @media print {
+    a[href]:after {
+     content: none !important;
+  }
   body * {
     visibility: hidden;
   }
