--- a/app/views/admin/payments/index.html.erb
+++ b/app/views/admin/payments/index.html.erb
@@ -7,7 +7,7 @@
   
 </div>
 <%= search_form_for @q, url: admin_payments_path(@admin_client) do |f| %>
-  <div class="row">
+  <div class="row search">
     <div class="col-lg-4">
       <%= f.search_field :created_at_dategteq, class: 'form-control datepicker2', autocomplete: "off",placeholder: "Start date" %>
     </div>
@@ -21,7 +21,7 @@
   </div>  
 <% end %>
 <div class="margin20"></div>
-<div class="row">
+<div class="row prinTable">
   <div class="col-lg-12">
     <div class="panel panel-default">
       <div class="panel-heading">
@@ -34,13 +34,13 @@
           <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
             <thead>
                 <tr>
-                    <th>Sr#</th>
-                    <th>Payment Date</th>
-                    <th>Payemnt Type</th>
-                    <th>amount</th>
-                    <th>Remaining amount</th>
-                    <th>Description</th>
-                    <th>Action</th>
+                    <th data-orderable="false">Sr#</th>
+                    <th data-orderable="false">Payment Date</th>
+                    <th data-orderable="false">Payemnt Type</th>
+                    <th data-orderable="false">amount</th>
+                    <th data-orderable="false">Remaining amount</th>
+                    <th data-orderable="false">Description</th>
+                    <th class="action">Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -75,7 +75,7 @@
                   <%# else %>
                   <!-- <td>Payment added manually</td> -->
                   <% end %>
-                  	<td><%= link_to '',  admin_payment_path(admin_payment), method: :delete, data: { confirm: 'Are you sure?' } ,class: "delete fa fa-trash icon_link with-tip no-text" , title: "delete" %>
+                  	<td class="actionSymbol"><%= link_to '',  admin_payment_path(admin_payment), method: :delete, data: { confirm: 'Are you sure?' } ,class: "delete fa fa-trash icon_link with-tip no-text" , title: "delete" %>
 									
                    <%= link_to '', admin_payment_path(admin_payment) ,class: "edit fa fa-eye icon_link with-tip no-text", title: "order detail"%></td>&nbsp; &nbsp;
                 </tr>
@@ -98,6 +98,11 @@
       </tbody>
   </table>
 </div>
+<div class="row">
+<div class="col-lg-6">
+    <button class="btn btn-primary" onclick="print()" style="float: left;">Print</button>
+  </div>
+</div>
 
 <style type="text/css">
 .rightTable {
@@ -113,6 +118,14 @@
 }
 .margin20 {
   margin-bottom: 20px;
+}
+@media print {
+  body * {
+    visibility: visible;
+  }
+  .search {
+    visibility: hidden;
+  }
 }
 </style>
 <script type="text/javascript">
