--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -10,6 +10,7 @@
 
 	<%= javascript_include_tag :admin , "data-turbolinks-track" => true %>
 	<%= stylesheet_link_tag    'admin', media: 'all', 'data-turbolinks-track' => true %>
+	<%= stylesheet_link_tag    'print', media: 'print' %>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 	<%#= javascript_include_tag 'select2.min' %>
