--- a/app/views/admin/payments/show.html.erb
+++ b/app/views/admin/payments/show.html.erb
@@ -71,7 +71,7 @@
 </div>
 <div class="row">
   <div class="col-lg-6">
-    <button class="btn btn-primary" onclick="print()" style="float: left;">Print</button>
+    <button class="btn btn-primary buttonPrint" onclick="print()" style="float: left;">Print</button>
   </div>
 </div>
 <style type="text/css">
