print button hide

--- a/app/assets/stylesheets/print.css
+++ b/app/assets/stylesheets/print.css
@@ -7,6 +7,7 @@
 .action {
 	display: none;
 }
-button.buttonPrint {
-	visibility: : none;
-}
+.no-print, .no-print *
+    {
+        display: none !important;
+    }
