--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -123,7 +123,7 @@
 </div>
 <style type="text/css">
 table, tr, td {
-    border: none;
+    font-size: 16px;
 }
 .rightTable {
   width: 25%;
@@ -148,6 +148,7 @@ table, tr, td {
   padding-bottom: 5%;
 
 }
+
 .Name {
   padding-top: 10px;
   border: 1px solid black;
@@ -166,6 +167,12 @@ table, tr, td {
     a[href]:after {
      content: none !important;
   }
+  table{
+    border: black;
+  }
+  table, tr, td {
+    font-size: 22px;
+}
   body * {
     visibility: hidden;
   }
@@ -194,7 +201,18 @@ table, tr, td {
     margin-left: 650px;
     width: 300px;
     border: 1px solid grey; 
+    font-size: 22px;
   }
+  table.table-bordered{
+    border:1px solid blue;
+    margin-top:20px;
+  }
+table.table-bordered > thead > tr > th{
+    border:1px solid blue;
+}
+table.table-bordered > tbody > tr > td{
+    border:1px solid blue;
+}
   .grand_total_print * {
     visibility: visible;
   }
@@ -210,6 +228,7 @@ table, tr, td {
   .header-print * {
      visibility: visible;
   }
+ 
  /* .print-area {
     position: absolute;
     left: 0;
