--- a/app/views/admin/payments/index.html.erb
+++ b/app/views/admin/payments/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="col-lg-12">
-    <h1 class="page-header text-center"><%= @admin_client.name %> Payments</h1>
+    <h1 class="page-header text-center"><%= @admin_client.name %> Leadger</h1>
   </div>
   
 </div>
@@ -31,12 +31,13 @@
       <div class="panel-body">
         
         <div class="dataTable_wrapper">
-          <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+          <table width="100%" class="table  table-bordered table-hover" id="dataTables-example">
             <thead>
                 <tr>
                     <th data-orderable="false">Sr#</th>
                     <th data-orderable="false">Payment Date</th>
-                    <th data-orderable="false">Payemnt Type</th>
+                    <th data-orderable="false">Credit</th>
+                    <th data-orderable="false">Debit</th>
                     <th data-orderable="false">amount</th>
                     <th data-orderable="false">Remaining amount</th>
                     <th data-orderable="false">Description</th>
@@ -54,7 +55,14 @@
                   <td><%= admin_payment.created_at.strftime("%B-%d-%Y") %></td>
 
                   <td>
-                     <%= admin_payment.payment_type %>
+                     <% if admin_payment.payment_type == ('debit' || 'Debit') %>
+                      <%= admin_payment.payment_type %>
+                     <% end %>
+                  </td>
+                  <td>
+                    <% if admin_payment.payment_type == ('credit' ||'Credit') %>
+                      <%= admin_payment.payment_type %>
+                    <% end %>
                   </td>
                    <td>
                      <%= admin_payment.amount %>
@@ -99,7 +107,7 @@
   </table>
 </div>
 <div class="row">
-<div class="col-lg-6">
+<div class="col-lg-6 no-print">
     <button class="btn btn-primary" onclick="print()" style="float: left;">Print</button>
   </div>
 </div>
