--- a/app/assets/stylesheets/print.css
+++ b/app/assets/stylesheets/print.css
@@ -17,12 +17,21 @@
     {
         display: none !important;
     }
+body {
+  font-size: 20px;
+}
+/*table, tr, td {
+    font-size: 18px;
+}*/
 
 table.table-bordered{
     border:2px solid black;
   }
 table.table-bordered thead  tr  th{
     border:2px solid black;
+}
+table.leftTable thead  tr  th{
+    width:70%;
 }
 /*table.table-bordered > tbody > tr > td{
     border:2px solid black;
