--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,11 +1,15 @@
 
 <div class="row">
   <div class="col-lg-12 header-print">
-    <h1 class="page-header" style="font-size:15px;" ><%= @admin_order.created_at.strftime("%m/%d/%Y %I:%M%p")  %></h1>
+    <h1 class="page-header" style="font-size:15px;" ><%= @admin_order.created_at.strftime("%m/%d/%Y %I:%M%p")  %>
+    <span style="text-align: center;margin-left: 250px;font-size: 20px;">Invoice</span></h1>
   </div>
 </div>
-<div class="row">
-  <div class="col-sm-4">
+<div class="companyName">
+    Haji Saeed Burewala
+  </div>
+<div class="row" style="margin-top: 10px;">
+  <div class="col-sm-6">
     <table class="table table-bordered leftTable sub_header">
         <tbody>
             <tr>
@@ -33,10 +37,7 @@
         </tbody>
     </table>
   </div>
-  <div class="col-sm-4 companyName">
-    Haji Saeed Burewala
-  </div>
-   <div class="col-sm-4  ">
+   <div class="col-sm-6  ">
     <div class="Name">
        <%= @admin_order.client.name %> <br>
         <%= @admin_order.client.address %><br>
@@ -125,15 +126,19 @@
 table, tr, td {
     font-size: 16px;
 }
+table, tr, td {
+    border: none;
+}
 .rightTable {
   width: 25%;
   float: right;
 }
 .leftTable {
-  width: 100%;
+  width: 80%;
   float: left;
 }
 .companyName {
+  width: 50%;
   height: 10%;
   border: 1px solid black;
   border-radius: 25px;
@@ -148,7 +153,6 @@ table, tr, td {
   padding-bottom: 5%;
 
 }
-
 .Name {
   padding-top: 10px;
   border: 1px solid black;
@@ -165,14 +169,8 @@ table, tr, td {
 }
   @media print {
     a[href]:after {
-     content: none !important;
+    visibility: hidden;
   }
-  table{
-    border: black;
-  }
-  table, tr, td {
-    font-size: 22px;
-}
   body * {
     visibility: hidden;
   }
@@ -181,7 +179,7 @@ table, tr, td {
   }
   .leftTable {
     visibility: visible;
-    width: 30%;
+    width: 50%;
   }
   .rightTable {
     visibility: visible;
@@ -189,30 +187,21 @@ table, tr, td {
   }
   .companyName {
     visibility: visible;
-    position: absolute;
+   /* position: absolute;
     width: 300px;
     margin-left: 320px;
-    text-align: center;
-    border: 1px solid grey; 
+    text-align: center;*/
+    border: 1px solid black; 
+    margin-left: 300px;
   }
   .Name {
     visibility: visible;
     position: absolute;
-    margin-left: 650px;
-    width: 300px;
-    border: 1px solid grey; 
-    font-size: 22px;
+    margin-left: 500px;
+    width: 400px;
+    border: 1px solid black; 
+    height: 190px;
   }
-  table.table-bordered{
-    border:1px solid blue;
-    margin-top:20px;
-  }
-table.table-bordered > thead > tr > th{
-    border:1px solid blue;
-}
-table.table-bordered > tbody > tr > td{
-    border:1px solid blue;
-}
   .grand_total_print * {
     visibility: visible;
   }
@@ -228,7 +217,6 @@ table.table-bordered > tbody > tr > td{
   .header-print * {
      visibility: visible;
   }
- 
  /* .print-area {
     position: absolute;
     left: 0;
