--- a/app/views/admin/payments/show.html.erb
+++ b/app/views/admin/payments/show.html.erb
@@ -69,7 +69,7 @@
     </div>
   </div>
 </div>
-<div class="row">
+<div class="row no-print">
   <div class="col-lg-6">
     <button class="btn btn-primary" onclick="print()" style="float: left;">Print</button>
   </div>
