payment description in payments index

--- a/app/views/admin/payments/index.html.erb
+++ b/app/views/admin/payments/index.html.erb
@@ -36,7 +36,7 @@
                 <tr>
                     <th data-orderable="false">Sr#</th>
                     <th data-orderable="false">Date</th>
-                    <th data-orderable="false">Description</th>
+                    <th data-orderable="false">Payment Description</th>
                     <th data-orderable="false">Credit</th>
                     <th data-orderable="false">Debit</th>
                     <th data-orderable="false">Amount</th>
