--- a/app/views/admin/return_orders/index.html.erb
+++ b/app/views/admin/return_orders/index.html.erb
@@ -34,7 +34,11 @@
                   <td><%= admin_order.client.name %></td>
                   <!-- <td><%#= admin_order.stocks.first.product.name %></td> -->
                   <td><%= admin_order.grand_total %></td>
-                  <td><%= admin_order.created_at.strftime("%B-%d-%Y") %></td>
+                  <% if admin_order.order_date.present? %>
+                    <td><%= admin_order.order_date.strftime("%B-%d-%Y") %></td>
+                  <% else %>
+                    <td><%= admin_order.created_at.strftime("%B-%d-%Y") %></td>
+                  <% end %>
                   <td class="text-center">
                       <span><%= link_to '', admin_return_order_path(admin_order) ,class: "edit fa fa-eye icon_link with-tip no-text", title: "order detail"%>&nbsp; &nbsp;</span>
                       <span>
